Frontend bağımlılıkları güncellendi: @typescript-eslint/eslint-plugin ve @typescript-eslint/parser sürümleri 6.21.0'a yükseltildi. CI yapılandırmasında frontend bağımlılıkları yüklemesi sırasında ek kontrol eklendi. ESLint yapılandırmasına @typescript-eslint eklendi.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,7 +45,9 @@ jobs:
     # Frontend Tests  
     - name: Install Frontend Dependencies
       working-directory: ./frontend
-      run: npm ci
+      run: |
+        npm ci
+        npm ls @typescript-eslint/eslint-plugin @typescript-eslint/parser
       
     - name: Run Frontend Lint
       working-directory: ./frontend
