--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     container_name: fotek_db
     environment:
       ACCEPT_EULA: Y
-      SA_PASSWORD: FotekCRM2025!
+      SA_PASSWORD: ${DB_PASSWORD}
       MSSQL_PID: Express
     ports:
       - "1433:1433"
@@ -32,8 +32,8 @@ services:
       DB_PORT: 1433
       DB_NAME: master
       DB_USER: sa
-      DB_PASSWORD: FotekCRM2025!
-      JWT_SECRET: fotek-jwt-secret-key-2025
+      DB_PASSWORD: ${DB_PASSWORD}
+      JWT_SECRET: ${JWT_SECRET}
     depends_on:
       db:
         condition: service_healthy
