--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,10 +16,11 @@
     "@types/node": "^18.15.13",
     "antd": "^5.8.4",
     "axios": "^1.4.0",
-    "chart.js": "^4.4.0",
+    "chart.js": "^4.4.9",
+    "dayjs": "^1.11.13",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
-    "react-chartjs-2": "^5.2.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.1"
   },
