--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       - "1433:1433"
     volumes:
       - db_data:/var/opt/mssql
+      - backup_data:/backup
     healthcheck:
       test: ["CMD-SHELL", "timeout 10s bash -c '</dev/tcp/localhost/1433' || exit 1"]
       interval: 30s
@@ -70,5 +71,31 @@ services:
       - frontend
       - api
 
+  # Backup Service
+  backup:
+    build:
+      context: ./backup
+      dockerfile: Dockerfile
+    container_name: fotek_backup
+    environment:
+      DB_HOST: db
+      DB_PORT: 1433
+      DB_USER: sa
+      DB_PASSWORD: ${DB_PASSWORD}
+      DB_NAME: master
+      BACKUP_PASSWORD: ${BACKUP_PASSWORD:-FotekCRM2025Backup!}
+      RETENTION_DAYS: 30
+    volumes:
+      - backup_data:/backup
+    depends_on:
+      db:
+        condition: service_healthy
+    healthcheck:
+      test: ["CMD-SHELL", "test -f /var/log/backup.log && test -f /var/log/cleanup.log"]
+      interval: 60s
+      timeout: 10s
+      retries: 3
+
 volumes:
-  db_data: 
+  db_data:
+  backup_data: 
