--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,5 +1,5 @@
+version: '3.9'
 services:
-  # MSSQL Database
   db:
     image: mcr.microsoft.com/mssql/server:2022-latest
     container_name: fotek_db
@@ -11,31 +11,28 @@ services:
       - "1433:1433"
     volumes:
       - db_data:/var/opt/mssql
+    restart: always
     healthcheck:
       test: ["CMD-SHELL", "timeout 10s bash -c '</dev/tcp/localhost/1433' || exit 1"]
       interval: 30s
       timeout: 10s
       retries: 5
       start_period: 60s
-    restart: always
 
-  # NestJS API
   api:
     build:
       context: ./backend
       dockerfile: Dockerfile
     container_name: fotek_api
-    restart: always
-    ports:
-      - "3000:3000"
     environment:
-      NODE_ENV: development
+      NODE_ENV: production
       DB_HOST: db
       DB_PORT: 1433
       DB_NAME: master
       DB_USER: sa
       DB_PASSWORD: ${DB_PASSWORD}
       JWT_SECRET: ${JWT_SECRET}
+    restart: always
     depends_on:
       db:
         condition: service_healthy
@@ -44,35 +41,20 @@ services:
       interval: 30s
       timeout: 10s
       retries: 5
-
-  # React Frontend
-  frontend:
-    build:
-      context: ./frontend
-      dockerfile: Dockerfile.dev
-    container_name: fotek_frontend
-    restart: always
     ports:
-      - "5173:5173"
-    environment:
-      VITE_API_URL: http://localhost:3000
-    depends_on:
-      - api
+      - "3000:3000"
 
-  # Nginx Reverse Proxy
   nginx:
-    image: nginx:alpine
+    build:
+      context: .
+      dockerfile: nginx/Dockerfile
     container_name: fotek_nginx
     restart: always
     ports:
       - "80:80"
-      - "443:443"
-    volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
-      - ./nginx/ssl:/etc/nginx/ssl
     depends_on:
-      - frontend
-      - api
+      api:
+        condition: service_healthy
     healthcheck:
       test: ["CMD-SHELL", "curl -f http://localhost/health || exit 1"]
       interval: 30s
@@ -80,4 +62,4 @@ services:
       retries: 5
 
 volumes:
-  db_data: 
+  db_data:
