--- a/backup/Dockerfile
+++ b/backup/Dockerfile
@@ -16,6 +16,27 @@ RUN curl https://packages.microsoft.com/keys/microsoft.asc | apt-key add - \
     && ACCEPT_EULA=Y apt-get install -y mssql-tools18 unixodbc-dev \
     && echo 'export PATH="$PATH:/opt/mssql-tools18/bin"' >> ~/.bashrc
 
+# Install Azure CLI
+RUN curl -sL https://aka.ms/InstallAzureCLIDeb | bash
+
+# Install Azure Storage Explorer
+RUN apt-get install -y azure-storage-explorer
+
+# Install Azure Storage Emulator
+RUN apt-get install -y azure-storage-emulator
+
+# Install Azure Storage Emulator
+RUN apt-get install -y azure-storage-emulator
+
+# Install Azure Storage Emulator
+RUN apt-get install -y azure-storage-emulator
+
+# Install Azure Storage Emulator
+RUN apt-get install -y azure-storage-emulator
+
+# Install Azure Storage Emulator
+RUN apt-get install -y azure-storage-emulator
+    
 # Set PATH for sqlcmd
 ENV PATH="$PATH:/opt/mssql-tools18/bin"
 
