--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "test:coverage": "jest --coverage",
     "test:integration": "jest --testPathPattern=tests/",
     "test:frontend": "jest --selectProjects=\"Frontend Tests\"",
+    "test:e2e": "playwright test",
+    "test:e2e:headed": "playwright test --headed",
+    "test:e2e:debug": "playwright test --debug",
+    "test:e2e:report": "playwright show-report",
     "dev:frontend": "cd frontend && npm run dev",
     "dev:backend": "cd backend && npm run start:dev",
     "build:frontend": "cd frontend && npm run build",
@@ -15,12 +19,13 @@
     "install:all": "npm install && cd frontend && npm install && cd ../backend && npm install"
   },
   "devDependencies": {
+    "@playwright/test": "^1.52.0",
     "@types/jest": "^29.5.8",
     "@types/node": "^20.10.0",
+    "axios": "^1.6.2",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.1",
-    "typescript": "^5.3.2",
-    "axios": "^1.6.2"
+    "typescript": "^5.3.2"
   },
   "workspaces": [
     "frontend",
@@ -39,4 +44,4 @@
   ],
   "author": "FotekCRM Team",
   "license": "MIT"
-} 
+}
