--- a/backend/package.json
+++ b/backend/package.json
@@ -27,11 +27,14 @@
     "@nestjs/platform-express": "^10.3.0",
     "@nestjs/schedule": "^6.0.0",
     "@nestjs/typeorm": "^10.0.1",
+    "@types/luxon": "^3.6.2",
     "@types/xml2js": "^0.4.14",
     "axios": "^1.6.2",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "cron": "^4.3.0",
+    "luxon": "^3.6.1",
     "mssql": "^10.0.2",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
